# IndieStudioBomberman

./: .gitignore  CMakeLists.txt  README.md
Assets/Map/: menuMap.txt
Assets/model/: bom1.glb  runRight2.iqm
Assets/model/bomb1/: bomb3.glb
Assets/ressources/: animRotateLeftLoop.iqm  animRunBack.iqm  animRunBackLoop.iqm  animRunForward.iqm  animRunForwardLoop.iqm  animRunLeft.iqm  animRunLeftLoop.iqm  animRunRight.iqm  animRunRightLoop.iqm  doraDance.iqm  doraIdle.iqm  doraJump.iqm  doraModel.iqm  doraRunBack.iqm  doraRunForward.iqm  doraRunLeft.iqm  doraRunRight.iqm  idle.iqm  idleLoop.iqm  mouseDancing.iqm  mouseModel.iqm  runBack.iqm  runForwardUnmoving.iqm  runLeftUnmoving.iqm  runRightUnmoving.iqm  trumpDance.iqm  trumpIdle.iqm  trumpJump.iqm  trumpModel.iqm  trumpRunBack.iqm  trumpRunForward.iqm  trumpRunLeft.iqm  trumpRunRight.iqm  turnLeft.iqm  turnRight.iqm  wiifitDance.iqm  wiifitIdle.iqm  wiifitJump.iqm  wiifitModel.iqm  wiifitRunBack.iqm  (+3 more)
src/: main.cpp
src/Audio/: Audio.cpp  Audio.hpp
src/Core/: Core.cpp  Core.hpp  CoreGameIU.cpp  CoreGameIU.hpp  CoreMenu.cpp  CoreMenu.hpp  MenuOpt.h
src/Error/: Error.cpp  Error.hpp
src/GameManager/: Game.cpp  Game.hpp
src/Lib/: ITransform.hpp
src/Lib/IU/: AIu.cpp  AIu.hpp
src/Lib/IU/NonSelectable/: ANonSelectable.cpp  ANonSelectable.hpp  ShapeCircle.cpp  ShapeCircle.hpp  ShapeRect.cpp  ShapeRect.hpp  Text.cpp  Text.hpp  Texture2D.cpp  Texture2D.hpp
src/Lib/IU/Selectable/: ASelectable.cpp  ASelectable.hpp  Button.cpp  Button.hpp  InputBox.cpp  InputBox.hpp
src/Lib/Map/: AMap.cpp  AMap.hpp
src/Lib/Map/Movable/: IA.cpp  IA.hpp  Player.cpp  Player.hpp
src/Lib/Map/Static/: AnimatedModel.cpp  AnimatedModel.hpp  Block.cpp  Block.hpp  Bonus.cpp  Bonus.hpp  Effect.cpp  Effect.hpp  Objects.cpp  Objects.hpp  Wall.cpp  Wall.hpp
src/Lib/Scene/: Cam.cpp  Cam.hpp  Window.cpp  Window.hpp
src/Utils/: Timer.cpp  Timer.hpp
